.envを適切に記述

--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
-ADMIN=""
-DISCORD_TOKEN=""
-GEMINI_API_KEY=""
-GOOGLE_SERVICE_ACCOUNT_CREDENTIALS_JSON=""
-SCHEDULE_CHANNEL_ID=""
-SHEET_API_KEY=""
-YOUTUBE_API_KEY=""
-SCHEDULE_ROLE_ID=""
-BASE_URL=""
-PORT=""
-FIREBASE_SERVICE_ACCOUNT_JSON=""
+DISCORD_TOKEN=xxxxxxx
+GEMINI_API_KEY=xxxxxxx
+FIREBASE_SERVICE_ACCOUNT_JSON={"type":"service_account", ...}  # 1行化、Node.js用
+
+FIREBASE_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_STORAGE_BUCKET=your-project-id.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=123456789012
+FIREBASE_APP_ID=1:123456789012:web:abcdefabcdefabcdef
+
+GOOGLE_SERVICE_ACCOUNT_CREDENTIALS_JSON=
+SCHEDULE_CHANNEL_ID=
+SHEET_API_KEY=
+YOUTUBE_API_KEY=
+SCHEDULE_ROLE_ID=
+BASE_URL=
+PORT=80
